versioned_docs/version-1.3.0-beta/installation.mdx
---
title: Installation
sidebar_position: 15
---

# Installation

This guide demonstrates the installation steps of ORAS CLI on different platforms.

## Homebrew

Install `oras` using [Homebrew](https://brew.sh/):

```bash
brew install oras
```

## Snap

Install `oras` using [Snap](https://snapcraft.io/store):

```bash
snap install oras --classic
```

## Release artifacts

Install ORAS from the latest [release artifacts](https://github.com/oras-project/oras/releases):

For macOS and Linux type operating systems, you can determine operating system and architecture using `uname`:

```bash
OS="$(uname -s | tr A-Z a-z)"
ARCH=$(uname -m | sed -e 's/x86_64/amd64/g')
VERSION="1.2.0"
curl -LO "https://github.com/oras-project/oras/releases/download/v${VERSION}/oras_${VERSION}_${OS}_${ARCH}.tar.gz"
mkdir -p oras-install/
tar -zxf oras_${VERSION}_${OS}_${ARCH}.tar.gz -C oras-install/
sudo chown root:0 oras-install/oras
sudo mv oras-install/oras /usr/local/bin/
rm -rf oras_${VERSION}_${OS}_${ARCH}.tar.gz oras-install/
```

### Linux

If you want to install ORAS on an AMD64-based Linux machine, run the following command:

```bash
VERSION="1.3.0-beta.2"
curl -LO "https://github.com/oras-project/oras/releases/download/v${VERSION}/oras_${VERSION}_linux_amd64.tar.gz"
mkdir -p oras-install/
tar -zxf oras_${VERSION}_*.tar.gz -C oras-install/
sudo mv oras-install/oras /usr/local/bin/
rm -rf oras_${VERSION}_*.tar.gz oras-install/
```
:::note

If you want to install ORAS on an ARM64-based Linux machine, you can download it from `https://github.com/oras-project/oras/releases/download/v1.3.0-beta.2/oras_1.3.0-beta.2_linux_arm64.tar.gz`.

:::

### macOS

If you want to install ORAS on a Mac computer with Apple silicon, run the following command:

```bash
VERSION="1.3.0-beta.2"
curl -LO "https://github.com/oras-project/oras/releases/download/v${VERSION}/oras_${VERSION}_darwin_arm64.tar.gz"
mkdir -p oras-install/
tar -zxf oras_${VERSION}_*.tar.gz -C oras-install/
sudo mv oras-install/oras /usr/local/bin/
rm -rf oras_${VERSION}_*.tar.gz oras-install/
```
:::note

If you want to install ORAS on an Intel-based Mac, you can download it from `https://github.com/oras-project/oras/releases/download/v1.3.0-beta.2/oras_1.3.0-beta.2_darwin_amd64.tar.gz`.

:::

### Windows

- You can install ORAS CLI on Windows using [WinGet (Windows Package Manager)](https://github.com/microsoft/winget-pkgs):

```bash
winget install oras --version 1.3.0-beta.2
```

- Alternatively, you can install ORAS CLI using `.exe` installer. Add `%USERPROFILE%\bin\` to your `PATH` environment variable so that `oras.exe` can be found.

```cmd
set VERSION="1.3.0-beta.2"
curl.exe -sLO  "https://github.com/oras-project/oras/releases/download/v%VERSION%/oras_%VERSION%_windows_amd64.zip"
tar.exe -xvzf oras_%VERSION%_windows_amd64.zip
mkdir -p %USERPROFILE%\bin\
copy oras.exe %USERPROFILE%\bin\
set PATH=%USERPROFILE%\bin\;%PATH%
```

## Docker Image

A public Docker image containing the CLI is available on [GitHub Container Registry](https://github.com/orgs/oras-project/packages/container/package/oras):

```
docker run -it --rm -v $(pwd):/workspace ghcr.io/oras-project/oras:v1.3.0-beta.2 help
```
:::note

The default WORKDIR in the image is `/workspace`.

:::

You can use the Docker image locally instead of installing a binary.
For example create an alias:

```
alias doras='docker run -it --rm -v $(pwd):/workspace ghcr.io/oras-project/oras:v1.3.0-beta.2'
```

Run ORAS commands:

```
doras pull ghcr.io/$GH_USER/oras:darwin-amd64 --username $GH_USER --password $GHCR_TOKEN -o ./download
```

## Nix

Nix is a tool that takes a unique approach to package management and system configuration.

The Nix Packages collection ([Nixpkgs](https://github.com/NixOS/nixpkgs)) is a set of over 80 000 packages for the Nix package manager.

oras also has a [Nix package](https://github.com/NixOS/nixpkgs/blob/master/pkgs/development/tools/oras/default.nix) available in the Nixpkgs repository.
 
:::info

You can install nix CLI from [here](https://nixos.org/download.html).

:::

You can install oras using the following command:

```bash
nix-env -iA nixpkgs.oras
```

## Verify

Your Go version, OS/Arch and Git commit may vary depending on what you have downloaded:
```shell
$ oras version
Version:        1.3.0-beta.2
Go version:     go1.23.4
OS/Arch:        darwin/arm64
Git commit:     2ca02f6f6514200366df26ba9ef6d1b311629dad
Git tree state: clean
```

You can check out our [how-to guide](./how_to_guides/verifying_binaries.mdx) if you would like to verify ORAS CLI Binaries.