versioned_docs/version-1.3/installation.mdx
---
title: Installation
sidebar_position: 15
---

# Installation

This guide demonstrates the installation steps of ORAS CLI on different platforms.

## Snap

Install `oras` using [Snap](https://snapcraft.io/oras) on Linux:

```bash
snap install oras --classic
```

:::note

The `--classic` flag is required because ORAS uses classic confinement to access files outside the snap sandbox.

:::

## Release artifacts

Install ORAS from the latest [release artifacts](https://github.com/oras-project/oras/releases):

For macOS and Linux type operating systems, you can determine operating system and architecture using `uname`:

```bash
OS="$(uname -s | tr A-Z a-z)"
ARCH=$(uname -m | sed -e 's/x86_64/amd64/g')
VERSION="1.3.4"
curl -LO "https://github.com/oras-project/oras/releases/download/v${VERSION}/oras_${VERSION}_${OS}_${ARCH}.tar.gz"
mkdir -p oras-install/
tar -zxf oras_${VERSION}_${OS}_${ARCH}.tar.gz -C oras-install/
sudo chown root:0 oras-install/oras
sudo mv oras-install/oras /usr/local/bin/
rm -rf oras_${VERSION}_${OS}_${ARCH}.tar.gz oras-install/
```

### Linux

If you want to install ORAS on an AMD64-based Linux machine, run the following command:

```bash
VERSION="1.3.4"
curl -LO "https://github.com/oras-project/oras/releases/download/v${VERSION}/oras_${VERSION}_linux_amd64.tar.gz"
mkdir -p oras-install/
tar -zxf oras_${VERSION}_*.tar.gz -C oras-install/
sudo mv oras-install/oras /usr/local/bin/
rm -rf oras_${VERSION}_*.tar.gz oras-install/
```
:::note

If you want to install ORAS on an ARM64-based Linux machine, you can download it from `https://github.com/oras-project/oras/releases/download/v1.3.4/oras_1.3.4_linux_arm64.tar.gz`.

:::

### macOS

If you want to install ORAS on a Mac computer with Apple silicon, run the following command:

```bash
VERSION="1.3.4"
curl -LO "https://github.com/oras-project/oras/releases/download/v${VERSION}/oras_${VERSION}_darwin_arm64.tar.gz"
mkdir -p oras-install/
tar -zxf oras_${VERSION}_*.tar.gz -C oras-install/
sudo mv oras-install/oras /usr/local/bin/
rm -rf oras_${VERSION}_*.tar.gz oras-install/
```
:::note

If you want to install ORAS on an Intel-based Mac, you can download it from `https://github.com/oras-project/oras/releases/download/v1.3.4/oras_1.3.4_darwin_amd64.tar.gz`.

:::

### Windows

You can install ORAS CLI using `.exe` installer. Add `%USERPROFILE%\bin\` to your `PATH` environment variable so that `oras.exe` can be found.

```cmd
set VERSION="1.3.4"
curl.exe -sLO  "https://github.com/oras-project/oras/releases/download/v%VERSION%/oras_%VERSION%_windows_amd64.zip"
tar.exe -xvzf oras_%VERSION%_windows_amd64.zip
mkdir -p %USERPROFILE%\bin\
copy oras.exe %USERPROFILE%\bin\
set PATH=%USERPROFILE%\bin\;%PATH%
```

## Go Install

If you have [Go](https://go.dev/) 1.24 or later installed, you can install ORAS CLI using `go install`:

```bash
go install oras.land/oras/cmd/oras@v1.3.0
```

The `oras` binary will be installed in the directory specified by the `GOBIN` environment variable, which defaults to `$GOPATH/bin` or `$HOME/go/bin` if the `GOPATH` environment variable is not set. You may need to add this directory to your `PATH` environment variable to run `oras` from any location.

## Docker Image

A public Docker image containing the CLI is available on [GitHub Container Registry](https://github.com/orgs/oras-project/packages/container/package/oras):

```
docker run -it --rm -v $(pwd):/workspace ghcr.io/oras-project/oras:v1.3.4 help
```
:::note

The default WORKDIR in the image is `/workspace`.

:::

You can use the Docker image locally instead of installing a binary.
For example create an alias:

```
alias doras='docker run -it --rm -v $(pwd):/workspace ghcr.io/oras-project/oras:v1.3.4'
```

Run ORAS commands:

```
doras pull ghcr.io/$GH_USER/oras:darwin-amd64 --username $GH_USER --password $GHCR_TOKEN -o ./download
```

## Verify

Your Go version, OS/Arch and Git commit may vary depending on what you have downloaded:

```shell
$ oras version

Version:        1.3.4
Go version:     go1.26.2
OS/Arch:        linux/amd64
Git commit:     fe425992fdfdf300a1cfb380bc4271b3e1a3d3db
Git tree state: clean
```

:::note

ORAS on other package managers such as Snap, Homebrew, WinGet, Nix will be updated after the stable release.

:::

You can check out our [how-to guide](./how_to_guides/verifying_binaries.mdx) if you would like to verify ORAS CLI Binaries.
